# paperplanes

./: .env  .gitignore  Cargo.toml
migrations/: 20250815204829_create_users.sql
src/: db.rs  main.rs
src/handlers/: art.rs  auth.rs  mod.rs  user_functions.rs
src/routes/: art.rs  auth.rs  home.rs  mod.rs
templates/: base.jinja  home.jinja  login.jinja  register.jinja
