[package]
name = "paperplanes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
axum = "0.8.4"
axum-server = "0.7.2"
dotenvy = "0.15.7"
image = "0.25.6"
minijinja = { version = "2.11.0", features = ["loader"] }
minijinja-autoreload = "2.11.0"
num-complex = "0.4.6"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
sqlx =  { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }


