[package]
name = "paperplanes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-server = "0.7.2"
axum-login = "0.18.0"
dotenvy = "0.15.7"
image = "0.25.6"
minijinja = { version = "2.11.0", features = ["loader"] }
minijinja-autoreload = "2.11.0"
num-complex = "0.4.6"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sqlx =  { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
cookie = "0.18"
time = "0.3.41"


